Fixed bug with note images overlapping new comment panel

--- a/app/assets/stylesheets/view_stylesheets/notes.css.scss
+++ b/app/assets/stylesheets/view_stylesheets/notes.css.scss
@@ -17,6 +17,7 @@ $highlight-color: #27F;
 
   &.new-comment-showing {
     margin-right: 0;
+    padding-right: 50px + $comments-sidebar-width;
   }
 
   .note-description {
@@ -77,7 +78,7 @@ $highlight-color: #27F;
   width: $comments-sidebar-width - 20px;
   -webkit-transition: top 0.2s ease;
   top: 50px;
-  right: 5px;
+  right: 2px;
   background-color: #fffff2;
   border-radius: 8px;
   border: 4px solid $highlight-color;
